name:                packman
version:             0.1
synopsis:            Serialization library for GHC
category:            Serialization, Data, GHC
license:             BSD3
author:              Michael Budde, Ásbjørn V. Jøkladal, Jost Berthold
maintainer:          jb.diku@gmail.com
build-type:          Simple
cabal-version:       >= 1.18
tested-with:         GHC==7.8.2, GHC==7.8.3
extra-source-files:  cbits/Wrapper.cmm
                     cbits/Pack.c
                     cbits/Errors.h
                     cbits/Types.h
                     cbits/GHCFunctions.h
                     pack.old

flag Debug
  description:       Enable debug support
  default:           False
-- we abuse flags "prof(p)" and "sparks(r)" and use "sanity(S)"

library
  exposed-modules:   GHC.Packing
  build-depends:     base >= 4.7,
                     ghc >= 7.8,
                     ghc-prim >= 0.3,
                     array >= 0.5,
                     binary >= 0.7,
                     bytestring >= 0.10,
                     primitive >= 0.5
  if flag(debug)
    ghc-options:     -debug -optc-DDEBUG -optc-g

  c-sources:         cbits/Wrapper.cmm
                     cbits/Pack.c
  include-dirs:      cbits
  default-language:  Haskell2010
  if flag(debug)
    cc-options:      -g -DDEBUG

test-suite simpletest
  type:              exitcode-stdio-1.0
  main-is:           Test/TestSerialisation.hs
  build-depends:     base >= 4.7,
                     directory >= 1.2,
                     ghc-prim >= 0.3,
                     array >= 0.5,
                     binary >= 0.7,
                     bytestring >= 0.10,
                     primitive >= 0.5,
                     packman
  default-language:  Haskell2010
  if flag(debug)
    ghc-options:     -debug -optc-g -optc-DDEBUG

test-suite testexceptions
  type:              exitcode-stdio-1.0
  main-is:           Test/TestExceptions.hs
  build-depends:     base >= 4.7,
                     directory >= 1.2,
                     ghc-prim >= 0.3,
                     array >= 0.5,
                     binary >= 0.7,
                     bytestring >= 0.10,
                     primitive >= 0.5,
                     Cabal >= 1.18,
                     packman
  default-language:  Haskell2010
  if flag(debug)
    ghc-options:     -debug -optc-g -optc-DDEBUG

-- test-suite alltests DOZNWOK!
--   type:              detailed-0.9
--   test-module:       Test.AllTests
--   build-depends:     base >= 4.7,
--                      directory >= 1.2,
--                      ghc-prim >= 0.3,
--                      array >= 0.5,
--                      binary >= 0.7,
--                      bytestring >= 0.10,
--                      primitive >= 0.5,
--                      Cabal >= 1.18,
--                      packman
--   default-language:  Haskell2010
--   if flag(debug)
--     ghc-options:     -debug -optc-g -optc-DDEBUG

source-repository head
  type:     git
  location: git://github.com/jberthold/packman.git
