name:                packman
version:             0.2
synopsis:            Serialization library for GHC
description:         This package provides Haskell data serialisation 
                     independent of evaluation, by accessing the Haskell heap
                     using a foreign primitive operation. Any Haskell data can
                     be serialised and later deserialised in the same or a new
                     run of the same program (that means, the same executable
                     file).
category:            Serialization, Data, GHC
license:             BSD3
license-file:        LICENSE
author:              Michael Budde, Ásbjørn V. Jøkladal, Jost Berthold
maintainer:          jb.diku@gmail.com
build-type:          Simple
cabal-version:       >= 1.20
tested-with:         GHC==7.8.2, GHC==7.8.3, GHC==7.10.2
extra-source-files:  cbits/Wrapper.cmm
                     cbits/Pack.c
                     cbits/Errors.h
                     cbits/Types.h
                     cbits/GHCFunctions.h
                     pack.old

flag Debug
  description:       Enable debug support
  default:           False
-- we abuse flags "prof(p)" and "sparks(r)" and use "sanity(S)"

library
  exposed-modules:   GHC.Packing
                     GHC.Packing.PackException
                     GHC.Packing.Type
                     GHC.Packing.Core
  build-depends:     base >= 4.7 && < 5,
                     ghc >= 7.8,
                     ghc-prim >= 0.3,
                     array >= 0.5,
                     binary >= 0.7,
                     bytestring >= 0.10,
                     primitive >= 0.5
  if flag(debug)
    ghc-options:     -debug -optc-DDEBUG -optc-g

  c-sources:         cbits/Wrapper.cmm
                     cbits/Pack.c
  include-dirs:      cbits
  default-language:  Haskell2010
  if flag(debug)
    cc-options:      -g -DDEBUG -DLIBRARY_CODE
  else
    cc-options:      -DLIBRARY_CODE

test-suite simpletest
  type:              exitcode-stdio-1.0
  main-is:           TestSerialisation.hs
  hs-source-dirs:    Test
  build-depends:     base >= 4.7,
                     directory >= 1.2,
                     ghc-prim >= 0.3,
                     array >= 0.5,
                     binary >= 0.7,
                     bytestring >= 0.10,
                     primitive >= 0.5,
                     packman
  default-language:  Haskell2010
  if flag(debug)
    ghc-options:     -debug -optc-g -optc-DDEBUG

test-suite testexceptions
  type:              exitcode-stdio-1.0
  main-is:           TestExceptions.hs
  hs-source-dirs:    Test
  build-depends:     base >= 4.7,
                     directory >= 1.2,
                     ghc-prim >= 0.3,
                     array >= 0.5,
                     binary >= 0.7,
                     bytestring >= 0.10,
                     primitive >= 0.5,
                     Cabal >= 1.18,
                     packman
  default-language:  Haskell2010
  if flag(debug)
    ghc-options:     -debug -optc-g -optc-DDEBUG

test-suite alltests
  type:              detailed-0.9
  test-module:       AllTests
  hs-source-dirs:    Test
  build-depends:     base >= 4.7,
                     directory >= 1.2,
                     ghc-prim >= 0.3,
                     array >= 0.5,
                     binary >= 0.7,
                     bytestring >= 0.10,
                     primitive >= 0.5,
                     Cabal >= 1.20,
                     packman
  default-language:  Haskell2010
  if flag(debug)
    ghc-options:     -debug -optc-g -optc-DDEBUG

test-suite testmthread
  type:              exitcode-stdio-1.0
  main-is:           TestMThread.hs
  hs-source-dirs:    Test
  build-depends:     base >= 4.7,
                     directory >= 1.2,
                     ghc-prim >= 0.3,
                     array >= 0.5,
                     binary >= 0.7,
                     bytestring >= 0.10,
                     primitive >= 0.5,
                     Cabal >= 1.20,
                     packman
  default-language:  Haskell2010
  if flag(debug)
    ghc-options:     -with-rtsopts=-N4 -debug -threaded -optc-g -optc-DDEBUG
  else
    ghc-options:     -with-rtsopts=-N4 -threaded

test-suite quickchecktest
  type:              detailed-0.9
  test-module:       QCTest
  hs-source-dirs:    Test
  build-depends:     base >= 4.7,
                     directory >= 1.2,
                     ghc-prim >= 0.3,
                     array >= 0.5,
                     binary >= 0.7,
                     bytestring >= 0.10,
                     primitive >= 0.5,
                     Cabal >= 1.20,
                     QuickCheck >= 2.6,
                     packman
  default-language:  Haskell2010
  if flag(debug)
    ghc-options:     -debug -optc-g -optc-DDEBUG


source-repository head
  type:     git
  location: git://github.com/jberthold/packman.git
